# Paimon-Companion

./: .env.example  .gitignore  README.md  config.toml  main.py  pyproject.toml
backend/: .env.example  main.py  pyproject.toml
backend/orchestrator/: context.py  loop.py
backend/plugins/: __init__.py
backend/plugins/games/: game_2048.py
backend/shared/: config.py  input_control.py  llm_client.py
frontend/: README.md  package.json  pnpm-lock.yaml  vite.config.ts
frontend/characters/: Ganyu.md  Paimon.md  Sucrose.md  Venti.md  Xiangling.md  Zhongli.md
frontend/docs/: API_DOCS.md  COMMERCIAL_MODEL_FIX.md  README.md  TEST_SCRIPTS.md  VTUBE_FIX_SUMMARY.md  测试脚本使用说明.md
frontend/public/Resources/: Credit.md
frontend/public/Resources/Commercial_models/: place_commercial_model_folders_here
frontend/scripts/: patch-vtube-models.js
frontend/src/: vite-env.d.ts
frontend/src/api/: live2d-api.ts
frontend/src/components/: ActionPanel.css  ActionPanel.tsx  ChatPanel.css  ChatPanel.tsx  Live2DComponent.tsx
frontend/test/: test_api.js  test_expression.js  test_models.js  test_motion.js  test_sound.js
frontend/test_utils/: api-client.js
orchestrator/: loop.py  safety.py
plugins/: __init__.py
plugins/games/: game_2048.py
prompts/games/: 2048.md
shared/: config.py
