[project]
name = "paimon-companion"
version = "0.1.0"
description = "PAIMON - Player-Aware Intelligent Monitoring and Operations Navigator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"ahu-paimon-toolkit[windows]",
	"fastmcp>=2.0",
	"openai>=1.0",
	"pynput>=1.7",
	"pydantic>=2.0",
	"toml",
	"python-dotenv",
	"loguru",
	"pillow>=10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend.shared", "backend.orchestrator", "backend.plugins"]
